--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "animejs": "^3.1.0",
     "jquery": "^3.4.1",
     "normalize.css": "^8.0.1",
+    "owl.carousel": "^2.3.4",
     "swiper": "^5.2.0",
     "waypoints": "^4.0.1"
   },
