--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack-cli": "^3.3.6"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.4.1",
     "animejs": "^3.1.0",
     "jquery": "^3.4.1",
     "normalize.css": "^8.0.1",
